force-app/main/default/objects/User/fields/ATAK_Code__c.field-meta.xml
<CustomField>
    <fullName>ATAK_Code__c</fullName>
    <externalId>true</externalId>
    <label>ATAK Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>