force-app/main/default/objects/User/fields/ATAK_Id__c.field-meta.xml
<CustomField>
    <fullName>ATAK_Id__c</fullName>
    <externalId>true</externalId>
    <label>ATAK Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>