force-app/main/default/objects/User/fields/Create_Field_Service_Resource__c.field-meta.xml
<CustomField>
    <fullName>Create_Field_Service_Resource__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Field Service Resource</label>
    <type>Checkbox</type>
</CustomField>