force-app/main/default/objects/User/fields/Interim_Office__c.field-meta.xml
<CustomField>
    <fullName>Interim_Office__c</fullName>
    <label>Interim Office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DAOUST INTERIM</fullName>
            </value>
            <value>
                <fullName>Krinkels Greencare NV</fullName>
            </value>
            <value>
                <fullName>VERDILUX SARL</fullName>
            </value>
            <value>
                <fullName>MARTENS DIETER</fullName>
            </value>
            <value>
                <fullName>RPA SERVICE</fullName>
            </value>
            <value>
                <fullName>AGO JOBS &amp; HR</fullName>
            </value>
            <value>
                <fullName>ITZU JOBS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>