force-app/main/default/objects/User/fields/Restrict_Desktop_Access__c.field-meta.xml
<CustomField>
    <fullName>Restrict_Desktop_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Restrict Desktop Access</label>
    <type>Checkbox</type>
</CustomField>